# date_validation

./: data_validation.ipynb  pyproject.toml  test_data.ipynb
.ipynb_checkpoints/: data_validation-checkpoint.ipynb
